--- a/app/src/main/res/layout/activity_super_admin_home.xml
+++ b/app/src/main/res/layout/activity_super_admin_home.xml
@@ -35,215 +35,212 @@
             app:titleTextAppearance="@style/ToolbarTitleStyle"
             app:titleCentered="true"/>
 
-        <LinearLayout
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="713dp"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="match_parent"
-                android:layout_height="60dp"
-                android:gravity="center_horizontal|center_vertical"
-                android:text="Panel de usuarios"
-                android:textColor="@color/black"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/imageView"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.4" />
-
-
-            <com.google.android.material.card.MaterialCardView
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginEnd="2dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.075"
-                app:layout_constraintStart_toStartOf="parent">
-
-                <LinearLayout
-                    android:layout_width="386dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/imgCostumer"
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:onClick="vistaPanelCliente"
-                            android:src="@drawable/costumer_green" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="9dp"
-                            android:text="Cliente"
-                            android:textSize="12sp"
-                            android:textStyle="bold" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/imgRepartidor"
-                            android:layout_width="82dp"
-                            android:layout_height="89dp"
-                            android:onClick="vistaPanelRepartidor"
-                            android:src="@drawable/deliver_green2" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Repartidor"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:orientation="vertical">
-
-                        <ImageView
-                            android:id="@+id/imgAdmin"
-                            android:layout_width="80dp"
-                            android:layout_height="87dp"
-                            android:onClick="vistaPanelAdmin"
-                            android:src="@drawable/admin_green" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="2dp"
-                            android:text="Administrador"
-                            android:textSize="12sp" />
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </com.google.android.material.card.MaterialCardView>
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="387dp"
-                android:layout_marginTop="16dp"
+                android:layout_height="584dp"
                 android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputLayout
-                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                <TextView
+                    android:id="@+id/textView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:hint="Buscar"
-                    app:startIconDrawable="@drawable/baseline_search_24">
+                    android:layout_height="60dp"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="Panel de usuarios"
+                    android:textColor="@color/black"
+                    android:textSize="30sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/imageView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.4" />
 
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp" />
-                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.card.MaterialCardView
+                    style="?attr/materialCardViewElevatedStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginEnd="2dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.075"
+                    app:layout_constraintStart_toStartOf="parent">
+
+                    <LinearLayout
+                        android:layout_width="386dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imgCostumer"
+                                android:layout_width="80dp"
+                                android:layout_height="80dp"
+                                android:onClick="vistaPanelCliente"
+                                android:src="@drawable/costumer_green" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="9dp"
+                                android:text="Cliente"
+                                android:textSize="12sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            android:layout_marginEnd="16dp"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imgRepartidor"
+                                android:layout_width="82dp"
+                                android:layout_height="89dp"
+                                android:onClick="vistaPanelRepartidor"
+                                android:src="@drawable/deliver_green2" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Repartidor"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:id="@+id/imgAdmin"
+                                android:layout_width="80dp"
+                                android:layout_height="87dp"
+                                android:onClick="vistaPanelAdmin"
+                                android:src="@drawable/admin_green" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="2dp"
+                                android:text="Administrador"
+                                android:textSize="12sp" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                </com.google.android.material.card.MaterialCardView>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8sp"
-                    android:orientation="horizontal">
+                    android:layout_height="387dp"
+                    android:layout_marginTop="16dp"
+                    android:orientation="vertical">
 
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_alfabetico"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="18sp"
-                        android:layout_marginTop="8sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:text="Alfabetico"
-                        android:textSize="10sp"
-                        app:backgroundTint="@color/light_green" />
-
-                    <com.google.android.material.button.MaterialButton
-                        android:id="@+id/bt_reciente"
-                        android:layout_width="80sp"
-                        android:layout_height="35sp"
-                        android:layout_marginStart="5sp"
-                        android:layout_marginTop="8sp"
-                        android:backgroundTint="@color/light_green"
-                        android:fontFamily="sans-serif-condensed-medium"
-                        android:paddingLeft="-5sp"
-                        android:paddingRight="-5sp"
-                        android:text="Más reciente"
-                        android:textSize="10sp"
-                        app:backgroundTint="@color/light_green" />
-
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/bt_filtro"
-                        style="?attr/floatingActionButtonSmallStyle"
-                        android:layout_width="wrap_content"
+                    <com.google.android.material.textfield.TextInputLayout
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="130sp"
-                        android:backgroundTint="@color/light_green"
-                        android:contentDescription="filtro"
-                        app:srcCompat="@drawable/filterpx"
-                        app:tint="@color/white" />
+                        android:layout_marginStart="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:hint="Buscar"
+                        app:startIconDrawable="@drawable/baseline_search_24">
 
-                </LinearLayout>
-
-                <androidx.core.widget.NestedScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                        <com.google.android.material.textfield.TextInputEditText
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:layout_marginTop="8sp"
+                        android:orientation="horizontal">
 
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/listClientesRecyler"
-                            android:layout_width="match_parent"
-                            android:layout_height="255dp"
-                            android:layout_margin="10dp"
-                            android:nestedScrollingEnabled="true" />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/bt_alfabetico"
+                            android:layout_width="80sp"
+                            android:layout_height="35sp"
+                            android:layout_marginStart="18sp"
+                            android:layout_marginTop="8sp"
+                            android:backgroundTint="@color/light_green"
+                            android:fontFamily="sans-serif-condensed-medium"
+                            android:paddingLeft="-5sp"
+                            android:paddingRight="-5sp"
+                            android:text="Alfabetico"
+                            android:textSize="10sp"
+                            app:backgroundTint="@color/light_green" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/bt_reciente"
+                            android:layout_width="80sp"
+                            android:layout_height="35sp"
+                            android:layout_marginStart="5sp"
+                            android:layout_marginTop="8sp"
+                            android:backgroundTint="@color/light_green"
+                            android:fontFamily="sans-serif-condensed-medium"
+                            android:paddingLeft="-5sp"
+                            android:paddingRight="-5sp"
+                            android:text="Más reciente"
+                            android:textSize="10sp"
+                            app:backgroundTint="@color/light_green" />
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/bt_filtro"
+                            style="?attr/floatingActionButtonSmallStyle"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="130sp"
+                            android:backgroundTint="@color/light_green"
+                            android:contentDescription="filtro"
+                            app:srcCompat="@drawable/filterpx"
+                            app:tint="@color/white" />
 
                     </LinearLayout>
-                </androidx.core.widget.NestedScrollView>
 
+
+
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/listClientesRecyler"
+                        android:layout_width="match_parent"
+                        android:layout_height="255dp"
+                        android:layout_margin="10dp" />
+
+
+                </LinearLayout>
 
             </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="130dp"
-                app:layout_constraintBottom_toBottomOf="@id/linearLayout"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:menu="@menu/bottom_navigation_superadmin"
-                tools:layout_editor_absoluteX="-14dp"
-                tools:layout_editor_absoluteY="578dp" />
-
-        </LinearLayout>
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
+            app:layout_constraintBottom_toBottomOf="@id/linearLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_superadmin"
+            tools:layout_editor_absoluteX="-14dp"
+            tools:layout_editor_absoluteY="578dp" />
 
 
     </com.google.android.material.appbar.AppBarLayout>
