--- a/app/src/main/res/layout/activity_super_admin_vista_log_event.xml
+++ b/app/src/main/res/layout/activity_super_admin_vista_log_event.xml
@@ -62,12 +62,12 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/listLogs"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="511dp"
                         android:layout_margin="10dp" />
 
                     <com.google.android.material.bottomnavigation.BottomNavigationView
                         android:id="@+id/bottom_navigation"
-                        android:layout_width="425dp"
+                        android:layout_width="match_parent"
                         android:layout_height="130dp"
                         app:layout_anchorGravity="bottom|center"
                         app:layout_constraintBottom_toBottomOf="@id/linearLayout"
