--- a/app/src/main/res/layout/sup_admin_cliente_list.xml
+++ b/app/src/main/res/layout/sup_admin_cliente_list.xml
@@ -6,9 +6,10 @@
 
     <com.google.android.material.card.MaterialCardView
         style="?attr/materialCardViewElevatedStyle"
-        android:layout_width="match_parent"
+        android:layout_width="342dp"
         android:layout_height="90dp"
-        android:layout_margin="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.075"
@@ -22,7 +23,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="90dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="horizontal">
@@ -39,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginStart="1dp">
+                    android:layout_marginStart="5dp">
 
                     <TextView
                         android:id="@+id/tv_nombre"
@@ -79,7 +80,7 @@
                         style="?attr/floatingActionButtonSmallStyle"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginStart="10sp"
+                        android:layout_marginStart="14sp"
                         android:contentDescription="Información"
                         android:onClick="vistaPerfilCliente"
                         app:backgroundTint="@color/light_yellow"
@@ -100,7 +101,7 @@
                         style="?attr/floatingActionButtonSmallStyle"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginStart="10sp"
+                        android:layout_marginStart="14sp"
                         android:contentDescription="Activar"
                         app:backgroundTint="@color/light_green"
                         app:srcCompat="@drawable/baseline_check_circle_24"
@@ -121,7 +122,7 @@
                         style="?attr/floatingActionButtonSmallStyle"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginStart="10sp"
+                        android:layout_marginStart="14sp"
                         android:contentDescription="Desactivar"
                         app:backgroundTint="@color/md_theme_errorContainer_mediumContrast"
                         app:srcCompat="@drawable/baseline_deactive_24"
