--- a/app/src/main/res/layout/activity_repartidor_tracking_estado_en_camino.xml
+++ b/app/src/main/res/layout/activity_repartidor_tracking_estado_en_camino.xml
@@ -6,7 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Repartidor.RepartidorTrackingEstadoEnCamino">
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="820sp"
+        app:layout_constraintTop_toTopOf="@+id/padre"
+        app:menu="@menu/cliente_menu" />
     <LinearLayout
+        android:id="@+id/padre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
