--- a/app/src/main/res/layout/activity_repartidor_tracking_estado_en_preparacion.xml
+++ b/app/src/main/res/layout/activity_repartidor_tracking_estado_en_preparacion.xml
@@ -8,6 +8,7 @@
     tools:context=".Repartidor.RepartidorTrackingEstadoEnPreparacion">
 
     <LinearLayout
+        android:id="@+id/padre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -20,7 +21,7 @@
                 android:layout_marginStart="5sp"
                 android:layout_marginTop="15sp"
                 android:src="@drawable/icons8_izquierda_circulo_48"
-                android:onClick="RegresarCrearCuenta2"
+                android:onClick="retroceder"
                 />
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/noti_button"
@@ -29,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="240sp"
                 android:layout_marginTop="15sp"
-                android:onClick="vistaNotificaciones"
+                android:onClick="verNotificacionesRepartidor"
                 android:backgroundTint="@color/light_green"
                 android:contentDescription="Notificaciones"
                 app:srcCompat="@drawable/notifications_24px"
@@ -41,14 +42,14 @@
                 android:layout_marginStart="8sp"
                 android:scaleType="centerCrop"
                 android:layout_marginTop="15sp"
-                android:onClick="verRepartidorTrackingEstadoEnPreparacion"
+                android:onClick="verPerfil"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10sp"
+            android:layout_marginTop="2sp"
             android:orientation="horizontal">
             <TextView
                 android:layout_marginTop="5sp"
@@ -76,7 +77,7 @@
             android:layout_width="400sp"
             android:layout_height="520sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20sp"
+            android:layout_marginTop="10sp"
             android:scaleType="centerCrop"
             android:src="@drawable/mapa" />
 
@@ -119,11 +120,11 @@
             <Button
                 style="@style/Widget.Material3.Button.ElevatedButton"
                 android:layout_width="132sp"
-                android:onClick="verRepartidorTrackingEstadoEnCamino"
+                android:onClick="verSiguienteTracking"
                 android:layout_height="60sp"
                 android:layout_marginTop="10sp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginStart="5sp"
+                android:layout_marginStart="10sp"
                 android:backgroundTint="@color/light_green"
                 android:text="Pedido recogido"
                 android:textColor="@color/white"
@@ -133,11 +134,18 @@
                 app:icon="@drawable/intento"
                 />
 
-
-
         </LinearLayout>
 
     </LinearLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="820sp"
+        app:layout_constraintTop_toTopOf="@+id/padre"
+        app:menu="@menu/cliente_menu" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
