--- a/app/src/main/res/layout/activity_repartidor_historial.xml
+++ b/app/src/main/res/layout/activity_repartidor_historial.xml
@@ -22,10 +22,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="-10sp"
             android:orientation="horizontal">
-
-
             <TextView
                 android:id="@+id/textView"
                 android:layout_width="180sp"
@@ -44,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25sp"
-                android:onClick="vistaNotificaciones"
+                android:onClick="verNotificacionesRepartidor"
                 android:backgroundTint="@color/light_green"
                 android:contentDescription="Notificaciones"
                 app:srcCompat="@drawable/notifications_24px"
@@ -56,13 +54,14 @@
                 android:layout_width="50sp"
                 android:layout_height="50sp"
                 android:scaleType="centerCrop"
+                android:onClick="verPerfil"
                 android:layout_marginTop="23sp"
                 android:layout_marginStart="10sp"
                 app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                 app:srcCompat="@drawable/hineilll" />
         </LinearLayout>
         <LinearLayout
-            android:layout_marginTop="15sp"
+            android:layout_marginTop="2sp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -76,7 +75,7 @@
                 android:textSize="13sp"
                 android:backgroundTint="@color/light_green"
                 android:layout_width="80sp"
-                android:layout_height="50sp"
+                android:layout_height="45sp"
                 android:text="Más reciente"
                 app:backgroundTint="@color/md_theme_secondary"
                 />
@@ -89,7 +88,7 @@
                 android:textSize="13sp"
                 android:backgroundTint="@color/dark_green"
                 android:layout_width="80sp"
-                android:layout_height="50sp"
+                android:layout_height="45sp"
                 android:text="Mayor Precio"
                 app:backgroundTint="@color/md_theme_secondary"
                 />
@@ -111,7 +110,7 @@
             android:layout_width="400sp"
             android:layout_height="750sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
